# gpr300-sp24-willow-ohara

./: CMakeLists.txt
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.frag
assignments/assignment1/: CMakeLists.txt  main.cpp
assignments/assignment1/assets/: post_none.frag  post_scanlines.frag  post_test.frag  post_vignette.frag
assignments/assignment2/: CMakeLists.txt  main.cpp
assignments/assignment2/assets/: debug.frag  debug.vert  lit.frag  lit.vert  post_curve.frag  post_invert.frag  post_vignette.frag  shadow.vert
assignments/assignment3/: CMakeLists.txt  main.cpp
assignments/assignment3/assets/: geometryPass.frag  lightOrb.frag  lightingPass.frag  shadow.frag
assignments/assignment4/Assets/Objects/: Knot.prefab  MovingCube.prefab
assignments/assignment4/Assets/Scenes/: SampleScene.unity
assignments/assignment4/Assets/Scripts/: Bezier.cs  MoveAlongBezier.cs
assignments/assignment4/ProjectSettings/: ProjectSettings.asset
assignments/finalProject/: CMakeLists.txt  ObjectTravel.cpp  ObjectTravel.h  Particle.cpp  Particle.h  ParticleContact.cpp  ParticleContact.h  PortalContact.cpp  PortalContact.h  main.cpp
assignments/finalProject/assets/: lightOrb.vert  lit.vert  portalLightingPass.frag  portalShader.frag  portalShader.vert
assignments/worksession1/: CMakeLists.txt  main.cpp
assignments/worksession1/assets/: lit.frag  water.frag  water.vert
assignments/worksession2/: CMakeLists.txt  main.cpp
assignments/worksession2/assets/: pbr.frag  pbr.vert
assignments/worksession3/: CMakeLists.txt  main.cpp
assignments/worksession3/assets/: lit.frag  lit.vert
assignments/worksession4/: CMakeLists.txt  main.cpp
assignments/worksession4/assets/: lightingPass.frag  lightingPass.vert
core/ew/: cameraController.cpp  procGen.cpp  procGen.h
core/willowLib/: passes.cpp  passes.h  portals.cpp  portals.h
